[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Extrude.ttf"

[sub_resource type="DynamicFont" id=2]
size = 130
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = SubResource( 1 )

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -537.0
margin_right = 956.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1922.0
margin_bottom = 1076.0
color = Color( 0.952941, 0.0980392, 0.0980392, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1919.0
margin_bottom = 1079.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 229.0
margin_top = 318.0
margin_right = 1690.0
margin_bottom = 761.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1461.0
margin_bottom = 131.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 1461.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 2 )
text = "Pigeon Hole Principle"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 1461.0
margin_bottom = 443.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 540.0
margin_right = 920.0
margin_bottom = 308.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 380.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 380.0
margin_bottom = 100.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 100.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 380.0
margin_bottom = 100.0
rect_min_size = Vector2( 332, 0 )
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 104.0
margin_right = 380.0
margin_bottom = 204.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 380.0
margin_bottom = 100.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 44.0
margin_bottom = 100.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 48.0
margin_right = 380.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 208.0
margin_right = 380.0
margin_bottom = 308.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 380.0
margin_bottom = 100.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 44.0
margin_bottom = 100.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 48.0
margin_right = 380.0
margin_bottom = 100.0
rect_min_size = Vector2( 332, 0 )
custom_fonts/font = SubResource( 6 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
